force-app/main/default/objects/People__x/People__x.object-meta.xml
<CustomObject>
    <description>People</description>
    <externalDataSource>odata</externalDataSource>
    <externalName>People</externalName>
    <label>People</label>
    <pluralLabel>People</pluralLabel>
</CustomObject>