force-app/main/default/objects/People__x/fields/AddressInfo__c.field-meta.xml
<CustomField>
    <fullName>AddressInfo__c</fullName>
    <description>AddressInfo</description>
    <externalDeveloperName>AddressInfo</externalDeveloperName>
    <label>AddressInfo</label>
    <length>32000</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>