force-app/main/default/objects/People__x/fields/Concurrency__c.field-meta.xml
<CustomField>
    <fullName>Concurrency__c</fullName>
    <description>Concurrency</description>
    <externalDeveloperName>Concurrency</externalDeveloperName>
    <label>Concurrency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>