force-app/main/default/objects/People__x/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <description>Emails</description>
    <externalDeveloperName>Emails</externalDeveloperName>
    <label>Emails</label>
    <length>128</length>
    <type>Text</type>
</CustomField>