force-app/main/default/objects/People__x/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender</description>
    <externalDeveloperName>Gender</externalDeveloperName>
    <label>Gender</label>
    <length>128</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>