force-app/main/default/objects/People__x/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>UserName</description>
    <externalDeveloperName>UserName</externalDeveloperName>
    <label>UserName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>